--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "selfie"
 version = "0.1.0"
-description = "Add your description here"
+description = "A Python decorator for logging attribute changes in classes"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.8"
 dependencies = []
 
 [dependency-groups]
 dev = [
-    "pytest>=9.0.2",
+    "pytest>=8.3.5",
     "ruff>=0.15.1",
 ]
